--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Домашнее задание3</title>
+    <title>Домашнее задание2</title>
     <!--нормалайз-->
     <link
       rel="stylesheet"
@@ -18,212 +18,158 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/portfolio.css" />
   </head>
-  <body>
+  <body class="page">
     <!--шапка-->
-    <header class="page-header">
-      <div class="container flexbox">
-        <nav class="navigation">
-          <a href="./index.html" class="link logo"
-            ><span class="logotype"
-              ><span class="logo">Web</span>Studio</span
-            ></a
-          >
-          <ul class="site-nav list">
-            <li class="nav-item">
-              <a class="link" href="./index.html">Студия</a>
-            </li>
-            <li class="nav-item">
-              <a class="link current" href="./portfolio.html">Портфолио</a>
-            </li>
-            <li class="nav-item"><a class="link" href="">Контакты</a></li>
-          </ul>
-        </nav>
+    <header class="header">
+      <a href="">
+        <img src="./images/header-img.jpg" alt="фото-в-процессе" />
+      </a>
 
-        <ul class="contacts list">
-          <li class="contacts-item">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <nav class="site-nav">
+        <ul class="site-nav list">
+          <li>
+            <a class="link" href="./index.html"
+              ><span class="logotype"
+                ><span class="logo">Web</span> Studio</span
+              ></a
+            >
           </li>
-          <li class="contacts-item">
-            <a href="tel:+380961111111">+380961111111</a>
-          </li>
+          <li><a class="link" href="./index.html">Студия</a></li>
+          <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="link" href="">Контакты</a></li>
         </ul>
-      </div>
+      </nav>
+      <ul class="contacts">
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+380961111111</a></li>
+      </ul>
     </header>
     <main>
       <!--основная часть-->
-      <section class="section portfolio">
-        <div class="container">
-          <h1 class="hero-title">Примеры работ</h1>
-          <ul class="btn-list">
-            <li class="work-item"><button type="button">Все</button></li>
-            <li class="work-item"><button type="button">Веб-сайты</button></li>
-            <li class="work-item"><button type="button">Приложения</button></li>
-            <li class="work-item"><button type="button">Дизайн</button></li>
-            <li class="work-item"><button type="button">Маркетинг</button></li>
-          </ul>
-
-          <ul class="portfolio-list">
-            <li class="examples-item">
-              <a href="">
-                <div class="portfolio-image">
-                  <img
-                    src="./images/portf1.jpg"
-                    width="370"
-                    height="294"
-                    alt=""
-                  />
-                </div>
-                <div class="card-container">
-                  <h3 class="portfolio-title">Технокряк</h3>
-                  <p class="portfolio-text">Веб-сайт</p>
-                </div>
-              </a>
-            </li>
-
-            <li class="examples-item">
-              <a href="">
-                <div class="portfolio-image">
-                  <img
-                    src="./images/portf2.jpg"
-                    width="370"
-                    height="294"
-                    alt=""
-                  />
-                </div>
-                <div class="card-container">
-                  <h3 class="portfolio-title">
-                    Постер New Orlean vs Golden Star
-                  </h3>
-                  <p class="portfolio-text">Дизайн</p>
-                </div>
-              </a>
-            </li>
-
-            <li class="examples-item">
-              <a href="">
-                <div class="portfolio-image">
-                  <img
-                    src="./images/portf3.jpg"
-                    width="370"
-                    height="294"
-                    alt=""
-                  />
-                </div>
-                <div class="card-container">
-                  <h3 class="portfolio-title">Ресторан Seafood</h3>
-                  <p class="portfolio-text">Приложения</p>
-                </div>
-              </a>
-            </li>
-
-            <li class="examples-item">
-              <a href="">
-                <div class="portfolio-image">
-                  <img
-                    src="./images/portf4.jpg"
-                    width="370"
-                    height="294"
-                    alt=""
-                  />
-                </div>
-                <div class="card-container">
-                  <h3 class="portfolio-title">Проект Prime</h3>
-                  <p class="portfolio-text">Маркетинг</p>
-                </div>
-              </a>
-            </li>
-
-            <li class="examples-item">
-              <a href="">
-                <div class="portfolio-image">
-                  <img
-                    src="./images/portf5.jpg"
-                    width="370"
-                    height="294"
-                    alt=""
-                  />
-                </div>
-                <div class="card-container">
-                  <h3 class="portfolio-title">Проект Boxes</h3>
-                  <p class="portfolio-text">Приложение</p>
-                </div>
-              </a>
-            </li>
-
-            <li class="examples-item">
-              <a href="">
-                <div class="portfolio-image">
-                  <img
-                    src="./images/portf6.jpg"
-                    width="370"
-                    height="294"
-                    alt=""
-                  />
-                </div>
-                <div class="card-container">
-                  <h3 class="portfolio-title">Inspiration has no Borders</h3>
-                  <p class="portfolio-text">Веб-сайт</p>
-                </div>
-              </a>
-            </li>
-
-            <li class="examples-item">
-              <a href="">
-                <div class="portfolio-image">
-                  <img
-                    src="./images/portf7.jpg"
-                    width="370"
-                    height="294"
-                    alt=""
-                  />
-                </div>
-                <div class="card-container">
-                  <h3 class="portfolio-title">Издание Limited Edition</h3>
-                  <p class="portfolio-text">Дизайн</p>
-                </div>
-              </a>
-            </li>
-
-            <li class="examples-item">
-              <a href="">
-                <div class="portfolio-image">
-                  <img
-                    src="./images/portf8.jpg"
-                    width="370"
-                    height="294"
-                    alt=""
-                  />
-                </div>
-                <div class="card-container">
-                  <h3 class="portfolio-title">Проект LAB</h3>
-                  <p class="portfolio-text">Маркетинг</p>
-                </div>
-              </a>
-            </li>
-
-            <li class="examples-item">
-              <a href="">
-                <div class="portfolio-image">
-                  <img
-                    src="./images/portf9.jpg"
-                    width="370"
-                    height="294"
-                    alt=""
-                  />
-                </div>
-                <div class="card-container">
-                  <h3 class="portfolio-title">Growing Business</h3>
-                  <p class="portfolio-text">Приложение</p>
-                </div>
-              </a>
-            </li>
-          </ul>
-        </div>
+      <section>
+        <h1 class="hero-title">Примеры работ</h1>
+        <ul>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайты</button></li>
+          <li><button type="button">Приложения</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="">
+              <img src="./images/portf1.jpg" alt="" />
+              <h3 class="portfolio-title">Технокряк</h3>
+              <p class="portfolio-text">Веб-сайт</p>
+              <p class="portfolio-description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portf2.jpg" alt="" />
+              <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
+              <p class="portfolio-text">Дизайн</p>
+              <p class="portfolio-description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portf3.jpg" alt="" />
+              <h3 class="portfolio-title">Ресторан Seafood</h3>
+              <p class="portfolio-text">Приложения</p>
+              <p class="portfolio-description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portf4.jpg" alt="" />
+              <h3 class="portfolio-title">Проект Prime</h3>
+              <p class="portfolio-text">Маркетинг</p>
+              <p class="portfolio-description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portf5.jpg" alt="" />
+              <h3 class="portfolio-title">Проект Boxes</h3>
+              <p class="portfolio-text">Приложение</p>
+              <p class="portfolio-description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portf6.jpg" alt="" />
+              <h3 class="portfolio-title">Inspiration has no Borders</h3>
+              <p class="portfolio-text">Веб-сайт</p>
+              <p class="portfolio-description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portf7.jpg" alt="" />
+              <h3 class="portfolio-title">Издание Limited Edition</h3>
+              <p class="portfolio-text">Дизайн</p>
+              <p class="portfolio-description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portf8.jpg" alt="" />
+              <h3 class="portfolio-title">Проект LAB</h3>
+              <p class="portfolio-text">Маркетинг</p>
+              <p class="portfolio-description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portf9.jpg" alt="" />
+              <h3 class="portfolio-title">Growing Business</h3>
+              <p class="portfolio-text">Приложение</p>
+              <p class="portfolio-description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
-    <!--Футер-->
-    <footer class="footer">
-      <div class="container">
+    <!--футер-->
+    <footer>
+      <div>
         <a class="link" href=""
           ><span class="logotype"><span class="logo">Web</span> Studio</span></a
         >
@@ -232,8 +178,23 @@
 
         <address class="connect">
           <a href="mailto:info@example.com">info@example.com</a>
-          <a class="tel-number" href="tel:+380961111111">+380991111111</a>
+          <a href="tel:+380991111111">+380991111111</a>
         </address>
+      </div>
+
+      <div>
+        <b class="followers">Присоединяйтесь</b>
+        <ul class="social-links">
+          <li><a href="" aria-label="Instagram link">Instagram</a></li>
+          <li><a href="" aria-label="Twitter link">Twitter</a></li>
+          <li><a href="" aria-label="Facebook link">Facebook</a></li>
+          <li><a href="" aria-label="Linkedin link">Linkedin</a></li>
+        </ul>
+      </div>
+
+      <div>
+        <b class="followers">Подпишитесь на рассылку</b>
+        <button class="button">Подписаться</button>
       </div>
     </footer>
   </body>
