Обьединение файлов стилей

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Портфолио</title>
+    <title>Web Studio</title>
     <!--Нормалайзер-->
     <link
       rel="stylesheet"
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!--Шапка-->
-    <header class="page-header">
+    <header class="studio-header">
       <nav>
         <a href="index.html" class="logo">
           <span>Web</span>Studio
