--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Домашнее задание2</title>
+    <title>Портфолио</title>
     <!--нормалайз-->
     <link
       rel="stylesheet"
@@ -16,13 +16,12 @@
     />
     <!--Стили-->
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/portfolio.css" />
   </head>
   <body class="page">
     <!--шапка-->
     <header class="header">
       <a href="">
-        <img src="" alt="фото-в-процессе" />
+        <img src="images/bcgimg.jpg" alt="фото-в-процессе" />
       </a>
 
       <nav class="site-nav">
@@ -169,33 +168,14 @@
     </main>
     <!--футер-->
     <footer>
-      <div>
-        <a class="link" href=""
-          ><span class="logotype"><span class="logo">Web</span> Studio</span></a
+        <a href="./index.html" class="logo">
+          <span>Web</span><span class="logo-white">Studio</span></a
         >
-
-        <address class="address">г.Киев, Бульвар Леси Украинки, д.26</address>
-
-        <address class="connect">
-          <a href="mailto:info@example.com">info@example.com</a>
-          <a href="tel:+380991111111">+380991111111</a>
-        </address>
-      </div>
-
-      <div>
-        <b class="followers">Присоединяйтесь</b>
-        <ul class="social-links">
-          <li><a href="" aria-label="Instagram link">Instagram</a></li>
-          <li><a href="" aria-label="Twitter link">Twitter</a></li>
-          <li><a href="" aria-label="Facebook link">Facebook</a></li>
-          <li><a href="" aria-label="Linkedin link">Linkedin</a></li>
-        </ul>
-      </div>
-
-      <div>
-        <b class="followers">Подпишитесь на рассылку</b>
-        <button class="button">Подписаться</button>
-      </div>
+        <address class="address">
+          г. Киев, пр-т Леси Украинки, 26<br />
+          <a href="mailto:info@example.com">info@example.com</a><br />
+          <a href="tel:+380991111111">+38 099 111 11 11</a>
+        </address>  
     </footer>
   </body>
 </html>
