--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
   </head>
   <body>
     <!--Шапка-->
-    <header class="studio-header">
-      <nav>
-        <a href="index.html" class="logo">
-          <span>Web</span>Studio
-          <img src="images/header-1.jpg" alt="Фото-Студия" />
+    <header class="page-header">
+      <div class="container flexbox"></div>
+      <nav class="nav flex">
+        <a href="index.html" class="logo flex">
+          <span class="logo web">Web</span><span class="logo-header-studio">Studio</span>
         </a>
-        <ul class="site-nav">
-          <li><a href="./index.html" class="link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+        <ul class="site-nav list flex">
+          <li class="item nav"><a href="./index.html" class="link current">Студия</a></li>
+          <li class="item nav"><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li class="item nav"><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
       <ul class="auth-nav">
@@ -38,6 +38,7 @@
         </li>
         <li><a href="tel:+380991111111" class="link">+38 099 111 11 11</a></li>
       </ul>
+      </div>
     </header>
     <main>
       <!--Герой-->
