--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,8 @@
   </head>
   <body class="page">
     <!--шапка-->
-    <header class="header">
+    <header class="page-header">
+      <div class="container flexbox">
       <a href="">
         <img src="images/bcgimg.jpg" alt="фото-в-процессе" />
       </a>
@@ -42,6 +43,7 @@
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+380961111111</a></li>
       </ul>
+    </div>
     </header>
     <main>
       <!--основная часть-->
