Flex, containet, box

--- a/index.html
+++ b/index.html
@@ -32,46 +32,49 @@
           <li class="item nav"><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="auth-nav">
-        <li>
+      <ul class="header-contact list flex">
+        <li class="item-nav">
           <a href="mailto:info@example.com" class="link">info@example.com</a>
         </li>
-        <li><a href="tel:+380991111111" class="link">+38 099 111 11 11</a></li>
+        <li class="item-nav"><a href="tel:+380991111111" class="link">+38 099 111 11 11</a></li>
       </ul>
       </div>
     </header>
     <main>
       <!--Герой-->
-
-      <section class="hero">
+      <section class="section-hero">
+        <div class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <a href="" class="button">Заказать услугу</a>
+      </div>
       </section>
       <!-- преимущества-->
-      <section class="section">
-        <ul class="list">
-          <li>
+      <section class="section our-approach">
+        <div class="container flex">
+          <h2 class="hide">Наш подход</h2>
+        <ul class="our-approach list flex">
+          <li class="item-approach">
             <h3 class="section-title">Внимание к деталям</h3>
             <p class="section-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
+          <li  class="item-approach">
             <h3 class="section-title">Пунктуальность</h3>
             <p class="section-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
+          <li  class="item-approach">
             <h3 class="section-title">Планирование</h3>
             <p class="section-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
+          <li  class="item-approach">
             <h3 class="section-title">Современные технологии</h3>
             <p class="section-text">
               Значимость этих проблем настолько очевидна, что реализация
@@ -79,6 +82,7 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
       <section class="gallery">
         <!--галерея-->
